@@ -21,7 +21,10 @@
  * questions.
  */
 
-// key: compiler.err.underscore.as.identifier.in.lambda
+// key: compiler.misc.feature.unnamed.variables
+// key: compiler.warn.preview.feature.use.plural
+// options: --enable-preview -source ${jdk.version} -Xlint:preview
+
 public class UnderscoreInLambdaExpression {
     java.util.function.Function<String,String> f = _ -> "x";
 }
